--- a/app/views/tags/index.html.erb
+++ b/app/views/tags/index.html.erb
@@ -1,12 +1,14 @@
 <h1>All Tags</h1>
 
 <ul id="tags">
-  <% @tags.each do |tag| %>
+  <% @tag.each do |tag| %>
     <li>
-      <%= link_to tag.name %>
+      <%= link_to tag.name, tag_path(tag) %>
+      <%= link_to "delete", tag_path(tag), method: :delete, data: {confirm: "Really delete the tag?"}
+%>
     </li>
   <% end %>
 </ul>
 
-<!-- 
-<%= link_to "Create a New Article", new_article_path, class: "new_article" %> -->
+
+
